--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "dev:web": "vite",
     "predev:all": "npm rebuild better-sqlite3",
     "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:web\"",
-    "build:web": "vue-tsc -b --noEmit && vite build",
+    "build:web": "vite build",
     "build:web:fast": "vite build",
     "build:server": "vite build --mode server",
-    "build:all": "npm run build:web && npm run build:server",
+    "build:all": "concurrently \"npm run build:web\" \"npm run build:server\"",
     "start:server:prod": "cross-env NODE_ENV=production node dist/server/index.js",
     "prestart:server:prod": "npm rebuild better-sqlite3",
     "prepare": "husky",
