--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:web": "vue-tsc -b --noEmit && vite build",
     "build:web:fast": "vite build",
     "build:server": "vite build --mode server",
-    "build:all": "npm run build:web && npm run build:server",
+    "build:all": "concurrently \"npm run build:web\" \"npm run build:server\"",
     "start:server:prod": "cross-env NODE_ENV=production node dist/server/index.js",
     "prestart:server:prod": "npm rebuild better-sqlite3",
     "prepare": "husky",
