feat: Add bundle visualizer, refine build sourcemap settings, and update CI artifact paths.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -206,5 +206,5 @@ jobs:
         with:
           name: web-build
           path: |
-            dist-web/
-            dist-server/
+            dist/client/
+            dist/server/
