--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "lint-staged": "^16.2.7",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "rollup-plugin-visualizer": "^6.0.5",
     "supertest": "^7.1.4",
     "tailwindcss": "^4.1.17",
     "terser": "^5.44.1",
