feat: Allow Google token path to be configured via `GOOGLE_TOKEN_PATH` environment variable, add directory creation with permission error handling, and remove `google-token.json`.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 GOOGLE_CLIENT_ID=your_client_id_here
 GOOGLE_CLIENT_SECRET=your_client_secret_here
 GOOGLE_REDIRECT_URI=your_redirect_uri_here
+# Optional: Path to store Google credentials token
+# GOOGLE_TOKEN_PATH=./config/google-token.json
 # Host for the development server. Defaults to 127.0.0.1.
 # Use 0.0.0.0 to expose the server to the local network.
 HOST=127.0.0.1
