--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,11 @@ services:
     volumes:
       # efficient sqlite persistence
       - ./media-library.db:/app/media-library.db
-      # Mount your media directories here.
-      # You can add more mappings as needed.
-      # Host path : Container path
-      - ./media:/media
-      # Use a named volume instead of a bind mount
-      - google_auth_data:/app/config
+
     environment:
       - NODE_ENV=production
-      # Tell the app exactly where the token is
-      - GOOGLE_TOKEN_PATH=/app/config/google-token.json
+
       # Add this line so the app knows where "Home" is
       - HOME=/app
     env_file:
-      - .env
-    restart: unless-stopped
-
-volumes:
-  google_auth_data:
+      - .env    restart: unless-stopped
