--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,19 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      # efficient sqlite persistence
-      - ./media-library.db:/app/media-library.db
+      - app_data:/app/data
+      # Mount your media directories here.
+      # You can add more mappings as needed.
+      # Host path : Container path
+      - ./media:/media
 
     environment:
       - NODE_ENV=production
-
-      # Add this line so the app knows where "Home" is
+      - DB_FILE_PATH=/app/data/media-library.db
       - HOME=/app
     env_file:
-      - .env    restart: unless-stopped
+      - .env
+    restart: unless-stopped
+
+volumes:
+  app_data:
