--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dev:server": "tsx --watch src/server/server.ts",
     "dev:web": "vite",
     "predev:all": "npm rebuild better-sqlite3",
-    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:web\"",
+    "dev:all": "concurrently \"npm run dev:server\" \"wait-on tcp:3000 && npm run dev:web\"",
     "build:web": "vue-tsc -b --noEmit && vite build",
     "build:web:fast": "vite build",
     "build:server": "vite build --mode server",
@@ -155,6 +155,7 @@
     "typescript-eslint": "^8.50.0",
     "vite": "^7.3.0",
     "vitest": "^4.0.6",
-    "vue-tsc": "^3.2.0"
+    "vue-tsc": "^3.2.0",
+    "wait-on": "^9.0.3"
   }
 }
