--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "helmet": "^8.1.0",
     "p-queue": "^9.0.1",
     "range-parser": "^1.2.1",
+    "three": "^0.182.0",
     "vue": "^3.5.26",
     "vue-virtual-scroller": "^2.0.0-beta.8"
   },
@@ -127,6 +128,7 @@
     "@types/node": "^25.0.3",
     "@types/range-parser": "^1.2.7",
     "@types/supertest": "^6.0.3",
+    "@types/three": "^0.182.0",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
     "@vitejs/plugin-vue": "^6.0.3",
