--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "electron-log": "^5.4.3",
     "execa": "^9.6.1",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "ffmpeg-static": "^5.3.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^170.0.0",
@@ -116,6 +117,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/node": "^25.0.5",
     "@types/range-parser": "^1.2.7",
     "@types/supertest": "^6.0.3",
