--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "electron-log": "^5.4.3",
     "execa": "^9.6.1",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "ffmpeg-static": "^5.3.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^170.0.0",
