feat: Implement comprehensive media streaming with direct play, FFmpeg transcoding, and HLS, along with new video player components.

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "google-auth-library": "^10.5.0",
     "googleapis": "^170.0.0",
     "helmet": "^8.1.0",
+    "hls.js": "^1.6.15",
     "p-queue": "^9.1.0",
     "range-parser": "^1.2.1",
     "selfsigned": "^5.4.0",
