--- a/package.json
+++ b/package.json
@@ -103,10 +103,10 @@
     "googleapis": "^171.4.0",
     "helmet": "^8.1.0",
     "p-queue": "^9.1.0",
-    "range-parser": "^1.2.1",
-    "typescript-eslint": "^8.55.0"
+    "range-parser": "^1.2.1"
   },
   "devDependencies": {
+    "typescript-eslint": "^8.56.0",
     "@playwright/test": "^1.58.2",
     "@swc/core": "^1.15.10",
     "@tailwindcss/vite": "^4.1.18",
@@ -116,14 +116,14 @@
     "@types/node": "^25.2.3",
     "@types/range-parser": "^1.2.7",
     "@types/supertest": "^6.0.3",
-    "@types/three": "^0.182.0",
+    "@types/three": "^0.183.0",
     "@vitejs/plugin-vue": "^6.0.4",
     "@vitest/coverage-v8": "^4.0.18",
     "@vue/test-utils": "^2.4.6",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "electron": "^40.4.1",
-    "electron-builder": "^26.8.0",
+    "electron-builder": "^26.8.1",
     "electron-vite": "^5.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.8.0",
@@ -138,7 +138,7 @@
     "supertest": "^7.2.2",
     "tailwindcss": "^4.1.17",
     "terser": "^5.44.1",
-    "three": "^0.182.0",
+    "three": "^0.183.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
