--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
       "node_modules/ffmpeg-static/**/*"
     ]
   },
+  "overrides": {
+    "minimatch": "^10.2.1"
+  },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
     "cors": "^2.8.6",
